ipad jump fix

--- a/css/index.css
+++ b/css/index.css
@@ -272,7 +272,7 @@ a.btn, .btn {
     background-size: 100% auto;
     opacity: 0;
     -webkit-transition: 0.7s 0.3s;
-    transition: 0.7s 0.3s; }
+    transition: 0.7s 0.1s; }
   .welcome-section.in-view::before {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -819,19 +819,19 @@ a.footer__links__link {
     margin-top: 0 !important;
     -webkit-transform: translate3d(0, -200px, 0) !important;
     transform: translate3d(0, -200px, 0) !important;
-    -webkit-transition: -webkit-transform 0.3s;
-    transition: -webkit-transform 0.3s;
-    -o-transition: transform 0.3s;
-    transition: transform 0.3s;
-    transition: transform 0.3s, -webkit-transform 0.3s; }
+    -webkit-transition: -webkit-transform 0.7s;
+    transition: -webkit-transform 0.7s;
+    -o-transition: transform 0.7s;
+    transition: transform 0.7s;
+    transition: transform 0.7s, -webkit-transform 0.7s; }
   .touch .scores-section__scores-list li:first-child {
     -webkit-transform: translate3d(0, -225px, 0) !important;
     transform: translate3d(0, -225px, 0) !important;
-    -webkit-transition: -webkit-transform 0.3s;
-    transition: -webkit-transform 0.3s;
-    -o-transition: transform 0.3s;
-    transition: transform 0.3s;
-    transition: transform 0.3s, -webkit-transform 0.3s; }
+    -webkit-transition: -webkit-transform 0.7s;
+    transition: -webkit-transform 0.7s;
+    -o-transition: transform 0.7s;
+    transition: transform 0.7s;
+    transition: transform 0.7s, -webkit-transform 0.7s; }
   .touch .scores-section__scores-list {
     overflow: visible !important; }
   .touch .scores-section .section-header {
@@ -841,11 +841,11 @@ a.footer__links__link {
     width: 40%;
     -webkit-transform: translate3d(0, -200px, 0) !important;
     transform: translate3d(0, -200px, 0) !important;
-    -webkit-transition: -webkit-transform 0.3s;
-    transition: -webkit-transform 0.3s;
-    -o-transition: transform 0.3s;
-    transition: transform 0.3s;
-    transition: transform 0.3s, -webkit-transform 0.3s; }
+    -webkit-transition: -webkit-transform 0.7s;
+    transition: -webkit-transform 0.7s;
+    -o-transition: transform 0.7s;
+    transition: transform 0.7s;
+    transition: transform 0.7s, -webkit-transform 0.7s; }
   .touch .scores-section__scores-list li:last-child {
     margin-bottom: 0 !important; }
   .touch .scores-section .two-columns {
