--- a/scss/media.scss
+++ b/scss/media.scss
@@ -34,21 +34,21 @@
 			margin-top:0 !important;
 			-webkit-transform: translate3d(0,-200px, 0) !important;
 		    	        transform: translate3d(0,-200px, 0) !important;
-		    	-webkit-transition:-webkit-transform 0.3s;
-		    	transition:-webkit-transform 0.3s;
-		    	-o-transition:transform 0.3s;
-		    	transition:transform 0.3s;
-		    	transition:transform 0.3s, -webkit-transform 0.3s;
+		    	-webkit-transition:-webkit-transform 0.7s;
+		    	transition:-webkit-transform 0.7s;
+		    	-o-transition:transform 0.7s;
+		    	transition:transform 0.7s;
+		    	transition:transform 0.7s, -webkit-transform 0.7s;
 		}
 
 		.scores-section__scores-list li:first-child {
 			-webkit-transform: translate3d(0,-225px, 0) !important;
 		    	        transform: translate3d(0,-225px, 0) !important;
-		    	-webkit-transition:-webkit-transform 0.3s;
-		    	transition:-webkit-transform 0.3s;
-		    	-o-transition:transform 0.3s;
-		    	transition:transform 0.3s;
-		    	transition:transform 0.3s, -webkit-transform 0.3s;
+		    	-webkit-transition:-webkit-transform 0.7s;
+		    	transition:-webkit-transform 0.7s;
+		    	-o-transition:transform 0.7s;
+		    	transition:transform 0.7s;
+		    	transition:transform 0.7s, -webkit-transform 0.7s;
 		}
 
 		.scores-section__scores-list {
@@ -63,11 +63,11 @@
 		    	width: 40%;
 		    	-webkit-transform: translate3d(0,-200px, 0) !important;
 		    	        transform: translate3d(0,-200px, 0) !important;
-		    	-webkit-transition:-webkit-transform 0.3s;
-		    	transition:-webkit-transform 0.3s;
-		    	-o-transition:transform 0.3s;
-		    	transition:transform 0.3s;
-		    	transition:transform 0.3s, -webkit-transform 0.3s;
+		    	-webkit-transition:-webkit-transform 0.7s;
+		    	transition:-webkit-transform 0.7s;
+		    	-o-transition:transform 0.7s;
+		    	transition:transform 0.7s;
+		    	transition:transform 0.7s, -webkit-transform 0.7s;
 		    }
 		}
 
